--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,11 @@ jobs:
         run: dotnet restore && dotnet build --no-restore --configuration Release
       - name: Run Tests
         run: dotnet test --no-build --verbosity normal
-      - uses: actions/setup-node@v4
-      - name: Build frontend
+      - name: Setup frontend
+        uses: actions/setup-node@v4
         with:
           node-version: 20
+      - name: Build frontend
         run: cd frontend && npm ci && npm run build
       #- name: Build Docker images (optional)
       #  run: docker compose -f docker/docker-compose.yml build
