--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,8 @@ jobs:
       - name: Restore & Build
         run: dotnet restore && dotnet build --no-restore --configuration Release
       - name: Run Tests
-        run: dotnet test --no-build --verbosity detailed
+        run: dotnet test --no-build --verbosity detailed        
+        working-directory: ./Tests/SharedShopping.Tests
       - name: Setup frontend
         uses: actions/setup-node@v4
         with:
