--- a/src/Infrastructure.Data/Infrastructure.Data.csproj
+++ b/src/Infrastructure.Data/Infrastructure.Data.csproj
@@ -19,4 +19,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
