--- a/src/Service.Command/appsettings.json
+++ b/src/Service.Command/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=SharedShopping;User Id=sa;Password=YourStrongPasswordHere!;Encrypt=False;Trust Server Certificate=False;"
+  }
 }
