--- a/src/Service.Command/appsettings.json
+++ b/src/Service.Command/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=SharedShopping;User Id=sa;Password=YourStrongPasswordHere!;Encrypt=False;Trust Server Certificate=False;"
+    "DefaultConnection": "Server=docker-sqlserver-1,1433;Database=SharedShopping;User Id=sa;Password=YourStrongPasswordHere!;Encrypt=False;Trust Server Certificate=False;"
   }
 }
