--- a/src/Service.Query/appsettings.Development.json
+++ b/src/Service.Query/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=SharedShopping;User Id=sa;Password=YourStrongPasswordHere!;Encrypt=False;Trust Server Certificate=False;"
   }
 }
