--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -67,10 +67,10 @@ services:
 
   query-service:
     build:
-      context: ../src/Service.Query
-      dockerfile: Dockerfile
+      context: ../src
+      dockerfile: Dockerfile.Query
     depends_on: [sqlserver, redis]
-    ports: ["5002:80"]
+    ports: ["5002:8080"]
 
   worker:
     build:
